Rename to fiisut-web

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snapsen-web",
+  "name": "fiisut-web",
   "private": true,
   "description": "A digital songbook web-app",
   "version": "0.1.0",
