--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,5 +10,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-      - run: npm install
+      - name: Install dependencies
+        run: npm install
       - run: npm run format-ci
